Fix navbar wrapping

--- a/assets/less/site/header.less
+++ b/assets/less/site/header.less
@@ -35,10 +35,12 @@
   font-weight: 500;
   letter-spacing: 3px;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 .nav-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .menu-item {
