--- a/assets/less/site/social.less
+++ b/assets/less/site/social.less
@@ -1,6 +1,7 @@
 .social {
   margin-right: -8px;
   text-align: right;
+  white-space: nowrap;
 }
 
 .social-item {
